--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
     --cor-secundaria: #F6F6F6;
     --cor-terciaria: #2B2B2B;
     --cor-hover: #717070;
+    --cor-javascript: #F7DF1E;
 
     --fonte-primaria : 'Do Hyeon', sans-serif;
     --fonte-secundaria: "Lato", sans-serif;
